--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="inner">
       <h3 class="masthead-brand">Cover</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="https://getbootstrap.com/docs/4.3/examples/cover/#">Home</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.3/examples/cover/#">Products</a>
+        <a class="nav-link active" href="index.html">Home</a>
+        <a class="nav-link" href="pages/products.html">Products</a>
         <a class="nav-link" href="https://getbootstrap.com/docs/4.3/examples/cover/#">Cart</a>
       </nav>
     </div>
