--- a/pages/products.html
+++ b/pages/products.html
@@ -43,8 +43,8 @@
     <div class="inner">
       <h3 class="masthead-brand">Cover</h3>
       <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="https://getbootstrap.com/docs/4.3/examples/cover/#">Home</a>
-        <a class="nav-link" href="https://getbootstrap.com/docs/4.3/examples/cover/#">Products</a>
+        <a class="nav-link active" href="../index.html">Home</a>
+        <a class="nav-link" href="products.html">Products</a>
         <a class="nav-link" href="https://getbootstrap.com/docs/4.3/examples/cover/#">Cart</a>
       </nav>
     </div>
@@ -54,15 +54,16 @@
 	<div class="row">
 
     <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="col-item">
+        <div class="col-item" id="item1">
+          <a href="../items/item1.html?product=0">
             <div class="photo">
-                <img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                <img src="../images/oak_1.jpg" class="img-responsive" alt="a" />
             </div>
             <div class="info">
                 <div class="row">
                     <div class="price col-md-6">
-                        <h5> Sample Product</h5>
-                        <h5 class="price-text-color">$199.99</h5>
+                        <h5> Cross Table</h5>
+                        <h5 class="price-text-color">€59.90</h5>
                     </div>
                     <div class="rating hidden-sm col-md-6">
                         <i class="price-text-color fa fa-star"></i><i class="price-text-color fa fa-star">
@@ -72,25 +73,27 @@
                 </div>
                 <div class="separator clear-left">
                     <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">Add to cart</a></p>
+                        <i class="fa fa-shopping-cart"></i><a href="" class="hidden-sm">Add to cart</a></p>
                     <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">More details</a></p>
+                        <i class="fa fa-list"></i><a href="" class="hidden-sm">More details</a></p>
                 </div>
                 <div class="clearfix">
                 </div>
             </div>
+          </a>
         </div>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-3">
-        <div class="col-item">
+        <div class="col-item" id="item2">
+          <a href="../items/item1.html?product=1">
             <div class="photo">
-                <img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                <img src="../images/oak_2.jpg" class="img-responsive" alt="a" />
             </div>
             <div class="info">
                 <div class="row">
                     <div class="price col-md-6">
-                        <h5> Sample Product</h5>
-                        <h5 class="price-text-color">$199.99</h5>
+                        <h5> Coffee Table</h5>
+                        <h5 class="price-text-color">€89.90</h5>
                     </div>
                     <div class="rating hidden-sm col-md-6">
                         <i class="price-text-color fa fa-star"></i><i class="price-text-color fa fa-star">
@@ -100,25 +103,27 @@
                 </div>
                 <div class="separator clear-left">
                     <p class="btn-add">
-                        <i class="fa fa-shopping-cart"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">Add to cart</a></p>
+                        <i class="fa fa-shopping-cart"></i><a href="" class="hidden-sm">Add to cart</a></p>
                     <p class="btn-details">
-                        <i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">More details</a></p>
+                        <i class="fa fa-list"></i><a href="" class="hidden-sm">More details</a></p>
                 </div>
                 <div class="clearfix">
                 </div>
             </div>
+          </a>
         </div>
     </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="col-item">
+            <div class="col-item" id="item3">
+              <a href="../items/item1.html?product=2">
                 <div class="photo">
-                    <img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                    <img src="../images/oak_3.jpg" class="img-responsive" alt="a" />
                 </div>
                 <div class="info">
                     <div class="row">
                         <div class="price col-md-6">
-                            <h5> Sample Product</h5>
-                            <h5 class="price-text-color">$199.99</h5>
+                            <h5> Dining Table (extendable)</h5>
+                            <h5 class="price-text-color">€109.90</h5>
                         </div>
                         <div class="rating hidden-sm col-md-6">
                             <i class="price-text-color fa fa-star"></i><i class="price-text-color fa fa-star">
@@ -128,25 +133,27 @@
                     </div>
                     <div class="separator clear-left">
                         <p class="btn-add">
-                            <i class="fa fa-shopping-cart"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">Add to cart</a></p>
+                            <i class="fa fa-shopping-cart"></i><a href="" class="hidden-sm">Add to cart</a></p>
                         <p class="btn-details">
-                            <i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">More details</a></p>
+                            <i class="fa fa-list"></i><a href="" class="hidden-sm">More details</a></p>
                     </div>
                     <div class="clearfix">
                     </div>
                 </div>
             </div>
+          </a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="col-item">
+            <div class="col-item" id="item4">
+              <a href="../items/item1.html?product=3">
                 <div class="photo">
-                    <img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+                    <img src="../images/oak_4.jpg" class="img-responsive" alt="a" />
                 </div>
                 <div class="info">
                     <div class="row">
                         <div class="price col-md-6">
-                            <h5> Sample Product</h5>
-                            <h5 class="price-text-color">$199.99</h5>
+                            <h5> Bench</h5>
+                            <h5 class="price-text-color">€39.90</h5>
                         </div>
                         <div class="rating hidden-sm col-md-6">
                             <i class="price-text-color fa fa-star"></i><i class="price-text-color fa fa-star">
@@ -156,13 +163,14 @@
                     </div>
                     <div class="separator clear-left">
                         <p class="btn-add">
-                            <i class="fa fa-shopping-cart"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">Add to cart</a></p>
+                            <i class="fa fa-shopping-cart"></i><a href="" class="hidden-sm">Add to cart</a></p>
                         <p class="btn-details">
-                            <i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">More details</a></p>
+                            <i class="fa fa-list"></i><a href="" class="hidden-sm">More details</a></p>
                     </div>
                     <div class="clearfix">
                     </div>
                 </div>
+              </a>
             </div>
         </div>
 	</div>
@@ -172,15 +180,16 @@
 <div class="row">
 
   <div class="col-xs-12 col-sm-6 col-md-3">
-      <div class="col-item">
+      <div class="col-item" id="item5">
+        <a href="../items/item1.html?product=4">
           <div class="photo">
-              <img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+              <img src="../images/oak_5.jpg" class="img-responsive" alt="a" />
           </div>
           <div class="info">
               <div class="row">
                   <div class="price col-md-6">
-                      <h5> Sample Product</h5>
-                      <h5 class="price-text-color">$199.99</h5>
+                      <h5> Vintage Chair</h5>
+                      <h5 class="price-text-color">€79.90</h5>
                   </div>
                   <div class="rating hidden-sm col-md-6">
                       <i class="price-text-color fa fa-star"></i><i class="price-text-color fa fa-star">
@@ -190,25 +199,28 @@
               </div>
               <div class="separator clear-left">
                   <p class="btn-add">
-                      <i class="fa fa-shopping-cart"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">Add to cart</a></p>
+                      <i class="fa fa-shopping-cart"></i><a href="" class="hidden-sm">Add to cart</a></p>
                   <p class="btn-details">
-                      <i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com" class="hidden-sm">More details</a></p>
+                      <i class="fa fa-list"></i><a href="" class="hidden-sm">More details</a></p>
               </div>
               <div class="clearfix">
               </div>
           </div>
+        </a>  
       </div>
   </div>
 
 </div>
-</div>
+<!-- </div>
 
   <footer class="mastfoot mt-auto">
     <div class="inner">
       <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
     </div>
   </footer>
-</div>
+</div> -->
+
+<script type="text/javascript" src="../scripts/scripts.js"></script>
 
 
 </body><div><div class="gr_-editor gr-iframe-first-load" style="display: none;"><div class="gr_-editor_back"></div><iframe class="gr_-ifr gr-_dialog-content" src="./Cover Template · Bootstrap_files/saved_resource.html"></iframe></div></div><grammarly-card><div></div></grammarly-card><span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span></html>
